unpackaged/main/default/objects/Churn_Reason__c/Churn_Reason__c.object-meta.xml
<CustomObject>
    <label>Churn Reason</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>Root Cause Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Churn Reasons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>