unpackaged/main/default/objects/Churn_Reason__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Root_Causes</relationshipName>
    <type>Lookup</type>
</CustomField>