unpackaged/main/default/objects/Churn_Reason__c/fields/Client_Reason__c.field-meta.xml
<CustomField>
    <fullName>Client_Reason__c</fullName>
    <description>SF case 00163538</description>
    <label>Client Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Detail_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not enough marketing results or leads</fullName>
                <default>true</default>
                <label>Not enough marketing results or leads</label>
            </value>
            <value>
                <fullName>Missing features I need</fullName>
            </value>
            <value>
                <fullName>Technical issues</fullName>
            </value>
            <value>
                <fullName>Insufficient customer service</fullName>
            </value>
            <value>
                <fullName>Shutting down my company</fullName>
            </value>
            <value>
                <fullName>Price is too high</fullName>
            </value>
            <value>
                <fullName>Other (update response in Other reason field)</fullName>
            </value>
            <value>
                <fullName>Saved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>