unpackaged/main/default/objects/Churn_Reason__c/fields/Detail_Reason__c.field-meta.xml
<CustomField>
    <fullName>Detail_Reason__c</fullName>
    <label>Detail Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Root_Cause__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quantity of Leads</fullName>
            </value>
            <value>
                <fullName>Quality of Leads</fullName>
            </value>
            <value>
                <fullName>Search Engine Ranking</fullName>
            </value>
            <value>
                <fullName>Website Traffic</fullName>
            </value>
            <value>
                <fullName>Website Customization Limitations</fullName>
            </value>
            <value>
                <fullName>MLS Feed Functionality</fullName>
            </value>
            <value>
                <fullName>Home Search Tool</fullName>
            </value>
            <value>
                <fullName>CRM Integration</fullName>
            </value>
            <value>
                <fullName>Deliverable Delayed</fullName>
            </value>
            <value>
                <fullName>Deliverable Missed</fullName>
            </value>
            <value>
                <fullName>Response Times/SLA</fullName>
            </value>
            <value>
                <fullName>Quality of Responses</fullName>
            </value>
            <value>
                <fullName>Quality of Deliverable</fullName>
            </value>
            <value>
                <fullName>Expectations/Contract Misunderstanding</fullName>
            </value>
            <value>
                <fullName>Out of Business/Retiring</fullName>
            </value>
            <value>
                <fullName>Non-Payment/Collections</fullName>
            </value>
            <value>
                <fullName>Budget/Client Performance</fullName>
            </value>
            <value>
                <fullName>Client Responsiveness</fullName>
            </value>
            <value>
                <fullName>Hired In-House</fullName>
            </value>
            <value>
                <fullName>Brokerage Providing Services</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Social Media followers</fullName>
            </value>
            <value>
                <fullName>Value/ROI</fullName>
            </value>
            <value>
                <fullName>Product Adoption</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Client Performance</fullName>
            </value>
            <value>
                <fullName>Saved</fullName>
            </value>
            <value>
                <fullName>CRM Functionality</fullName>
                <isActive>false</isActive>
                <label>CRM Functionality</label>
            </value>
            <value>
                <fullName>Reason not populated</fullName>
                <isActive>false</isActive>
                <label>Reason not populated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>