unpackaged/main/default/objects/Churn_Reason__c/fields/Other_Client_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Client_Reason__c</fullName>
    <description>Case 00163538</description>
    <inlineHelpText>Please fill out the Client&#39;s Other reason for churning</inlineHelpText>
    <label>Other Client Reason</label>
    <type>TextArea</type>
</CustomField>