unpackaged/main/default/objects/Churn_Reason__c/fields/Primary_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Reason__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Reason</label>
    <type>Checkbox</type>
</CustomField>