unpackaged/main/default/objects/Churn_Reason__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Churn Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Service/Experience</fullName>
            </value>
            <value>
                <fullName>Structural Churn</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Saved</fullName>
            </value>
            <value>
                <fullName>Brokerage Providing Services</fullName>
                <isActive>false</isActive>
                <label>Brokerage Providing Services</label>
            </value>
            <value>
                <fullName>Budget/Client Performance</fullName>
                <isActive>false</isActive>
                <label>Budget/Client Performance</label>
            </value>
            <value>
                <fullName>CRM Integration</fullName>
                <isActive>false</isActive>
                <label>CRM Integration</label>
            </value>
            <value>
                <fullName>Client Responsiveness</fullName>
                <isActive>false</isActive>
                <label>Client Responsiveness</label>
            </value>
            <value>
                <fullName>Deliverable Delayed</fullName>
                <isActive>false</isActive>
                <label>Deliverable Delayed</label>
            </value>
            <value>
                <fullName>Deliverable Missed</fullName>
                <isActive>false</isActive>
                <label>Deliverable Missed</label>
            </value>
            <value>
                <fullName>Expectations/Contract Misunderstanding</fullName>
                <isActive>false</isActive>
                <label>Expectations/Contract Misunderstanding</label>
            </value>
            <value>
                <fullName>Hired In-House</fullName>
                <isActive>false</isActive>
                <label>Hired In-House</label>
            </value>
            <value>
                <fullName>Home Search Tool</fullName>
                <isActive>false</isActive>
                <label>Home Search Tool</label>
            </value>
            <value>
                <fullName>MLS Feed Functionality</fullName>
                <isActive>false</isActive>
                <label>MLS Feed Functionality</label>
            </value>
            <value>
                <fullName>Non-Payment/Collections</fullName>
                <isActive>false</isActive>
                <label>Non-Payment/Collections</label>
            </value>
            <value>
                <fullName>Out of Business/Retiring</fullName>
                <isActive>false</isActive>
                <label>Out of Business/Retiring</label>
            </value>
            <value>
                <fullName>Quality of Deliverable</fullName>
                <isActive>false</isActive>
                <label>Quality of Deliverable</label>
            </value>
            <value>
                <fullName>Quality of Leads</fullName>
                <isActive>false</isActive>
                <label>Quality of Leads</label>
            </value>
            <value>
                <fullName>Quality of Responses</fullName>
                <isActive>false</isActive>
                <label>Quality of Responses</label>
            </value>
            <value>
                <fullName>Quantity of Leads</fullName>
                <isActive>false</isActive>
                <label>Quantity of Leads</label>
            </value>
            <value>
                <fullName>Reason not populated</fullName>
                <isActive>false</isActive>
                <label>Reason not populated</label>
            </value>
            <value>
                <fullName>Response Times/SLA</fullName>
                <isActive>false</isActive>
                <label>Response Times/SLA</label>
            </value>
            <value>
                <fullName>Search Engine Ranking</fullName>
                <isActive>false</isActive>
                <label>Search Engine Ranking</label>
            </value>
            <value>
                <fullName>Website Customization Limitations</fullName>
                <isActive>false</isActive>
                <label>Website Customization Limitations</label>
            </value>
            <value>
                <fullName>Website Traffic</fullName>
                <isActive>false</isActive>
                <label>Website Traffic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>